--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.6",
     "lucide-react": "^0.341.0",
     "next": "14.1.0",
