--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.6",
+    "locomotive-scroll": "^5.0.0-beta.11",
     "lucide-react": "^0.341.0",
     "next": "14.1.0",
     "react": "^18",
