--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "framer-motion": "^11.0.6",
     "locomotive-scroll": "^5.0.0-beta.11",
     "lucide-react": "^0.341.0",
-    "next": "14.1.0",
+    "next": "^14.2.1",
+    "next-view-transitions": "^0.1.1",
     "node-appwrite": "^12.0.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-spinners": "^0.13.8",
@@ -43,7 +45,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^14.2.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
