add blog page and change some setiing page functionality

--- a/package.json
+++ b/package.json
@@ -16,12 +16,20 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@tiptap/extension-highlight": "^2.3.0",
+    "@tiptap/extension-image": "^2.3.0",
+    "@tiptap/extension-link": "^2.3.0",
+    "@tiptap/extension-text-align": "^2.3.0",
+    "@tiptap/extension-youtube": "^2.3.0",
+    "@tiptap/pm": "^2.3.0",
+    "@tiptap/react": "^2.3.0",
+    "@tiptap/starter-kit": "^2.3.0",
     "appwrite": "^13.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.6",
-    "locomotive-scroll": "^5.0.0-beta.11",
     "lucide-react": "^0.341.0",
     "next": "^14.2.1",
     "next-view-transitions": "^0.1.1",
