--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint": "^8",
     "eslint-config-next": "^14.2.1",
     "postcss": "^8",
+    "postcss-nesting": "^12.1.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
